--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hmac = "0.10.1"
 openssl = "0.10.33"
 rand = "0.8.3"
 rust-argon2 = "0.8.3"
-zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
+sha2 = "0.9.3"
+zeroize = "1.2.0"
+
+[profile.dev]
+split-debuginfo = "unpacked"
